nydus-rs: use a different rafs config if needed
Different rafs instances don't necessarily share rafs config file,
which tells where blob file is stored.  This makes rafs config file
configurable when attaching a rafs instance through api.

Provided that 'config' is not filled, the added rafs instance will use
the default rafs config file set via "nydusd --config".
